--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "dev"
   ],
   "author": "Rafael Paciencia",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
+  },
+  "type": "module"
 }
